code optimizations on analysis